log
Fri 17 Mar 2023 12:27:37 AM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
cc56b71
Fri 17 Mar 2023 12:30:53 AM UTC: 
 exercises.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
 tests:  4|3
total_score: 40/70
2c2b880
Fri 17 Mar 2023 12:34:06 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
e1c59a6
Fri 17 Mar 2023 12:35:06 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
42cb5f6
Fri 17 Mar 2023 12:36:16 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
4844890
Fri 17 Mar 2023 12:38:57 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:109:15: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  109 |   c[i] = a[i] + b[i];
      |          ~~~~ ^ ~~~~
      |           |      |
      |           Vector Vector
Compilation failed
f342484
Fri 17 Mar 2023 12:40:03 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
dc48d17
